Update landing page to display MILESTONE 3

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <title>Darkroom</title>
 </head>
 <body style="background-color: #f4f4f4;">
-<h1>MILESTONE 2</h1>
+<h1>My Awesome Website</h1>
+<p>MILESTONE 2 <span class="milestone-separator">|</span> MILESTONE 3</p>
  <h1>MILESTONE 3</h1>
   <div class="navbar-fixed">
     <nav class="turquoise" >
